restructure ebooks and mv to subdir

--- a/ebooks/Alices_Adventures_in_Wonderland.html
+++ b/ebooks/Alices_Adventures_in_Wonderland.html
@@ -23,7 +23,7 @@
     <link rel="dc.source"        href="http://www.gutenberg.org/etext/928" title="Original Source" />
     <link rel="dc.description"   href="http://en.wikipedia.org/wiki/Alice%E2%80%99s_Adventures_in_Wonderland" title="Details on Wikipedia" />
     <link rel="schema.dc"        href="http://purl.org/dc/terms/" />
-    <link rel="stylesheet"       href="ebook.css" />
+    <link rel="stylesheet"       href="/ebook.css" />
     <link rel="start"            href="/" title="Start" />
     <link rel="index"            href="/ebooks/" title="Index" />
     <link rel="up"               href="/ebooks/" />
@@ -2927,6 +2927,6 @@ and find a pleasure in all their simple joys, remembering her own
 child-life, and the happy summer days.</p>
 </section>
 </article>
-<script src="ebook.js"></script>
+<script src="/ebook.js"></script>
 </body>
 </html>
