--- a/ebooks/Siddhartha.html
+++ b/ebooks/Siddhartha.html
@@ -23,7 +23,7 @@
     <link rel="dc.source"        href="http://www.gutenberg.org/etext/2499" title="Originalquelle" />
     <link rel="dc.description"   href="http://de.wikipedia.org/wiki/Siddhartha_%28Hesse%29" title="Details bei der Wikipedia" />
     <link rel="schema.dc"        href="http://purl.org/dc/terms/" />
-    <link rel="stylesheet"       href="ebook.css" />
+    <link rel="stylesheet"       href="/ebook.css" />
     <link rel="start"            href="/" title="Start" />
     <link rel="index"            href="/ebooks/" title="Index" />
     <link rel="up"               href="/ebooks/" />
@@ -647,6 +647,6 @@ meinem Vetter in Japan gewidmet
 </section>
 </section>
 </article>
-<script src="ebook.js"></script>
+<script src="/ebook.js"></script>
 </body>
 </html>
