--- a/ebooks/The_Invisible_Man.html
+++ b/ebooks/The_Invisible_Man.html
@@ -23,7 +23,7 @@
     <link rel="dc.source"        href="http://en.wikisource.org/wiki/The_Invisible_Man" title="Original Source" />
     <link rel="dc.description"   href="http://en.wikipedia.org/wiki/The_Invisible_Man" title="Details on Wikipedia" />
     <link rel="schema.dc"        href="http://purl.org/dc/terms/" />
-    <link rel="stylesheet"       href="ebook.css" />
+    <link rel="stylesheet"       href="/ebook.css" />
     <link rel="start"            href="/" title="Start" />
     <link rel="index"            href="/ebooks/" title="Index" />
     <link rel="up"               href="/ebooks/" />
@@ -1277,6 +1277,6 @@
 <p>So he lapses into a dream, the undying wonderful dream of his life. And though Kemp has fished unceasingly, no human being save the landlord knows those books are there, with the subtle secret of invisibility and a dozen other strange secrets written therein. And none other will know of them until he dies.</p>
 </section>
 </article>
-<script src="ebook.js"></script>
+<script src="/ebook.js"></script>
 </body>
 </html>
