--- a/ebooks/The_Picture_of_Dorian_Gray.html
+++ b/ebooks/The_Picture_of_Dorian_Gray.html
@@ -22,7 +22,7 @@
     <link rel="dc.source"        href="http://www.gutenberg.org/etext/26740" title="Original Source" />
     <link rel="dc.description"   href="http://en.wikipedia.org/wiki/The_Picture_of_Dorian_Gray" title="Details on Wikipedia" />
     <link rel="schema.dc"        href="http://purl.org/dc/terms/" />
-    <link rel="stylesheet"       href="ebook.css" />
+    <link rel="stylesheet"       href="/ebook.css" />
     <link rel="start"            href="/" title="Start" />
     <link rel="index"            href="/ebooks/" title="Index" />
     <link rel="up"               href="/ebooks/" />
@@ -1711,6 +1711,6 @@ We can forgive a man for making a useful thing as long as he does not admire it.
 <p>When they entered they found, hanging upon the wall, a splendid portrait of their master as they had last seen him, in all the wonder of his exquisite youth and beauty. Lying on the floor was a dead man, in evening dress, with a knife in his heart. He was withered, wrinkled, and loathsome of visage. It was not till they had examined the rings that they recognised who it was.</p>
 </section>
 </article>
-<script src="ebook.js"></script>
+<script src="/ebook.js"></script>
 </body>
 </html>
