--- a/ebooks/Treasure_Island.html
+++ b/ebooks/Treasure_Island.html
@@ -23,7 +23,7 @@
     <link rel="dc.source"        href="http://www.gutenberg.org/etext/120" title="Original Source" />
     <link rel="dc.description"   href="http://en.wikipedia.org/wiki/Treasure_Island" title="Details on Wikipedia" />
     <link rel="schema.dc"        href="http://purl.org/dc/terms/" />
-    <link rel="stylesheet"       href="ebook.css" />
+    <link rel="stylesheet"       href="/ebook.css" />
     <link rel="start"            href="/" title="Start" />
     <link rel="index"            href="/ebooks/" title="Index" />
     <link rel="up"               href="/ebooks/" />
@@ -6006,6 +6006,6 @@ still ringing in my ears: “Pieces of eight! Pieces of eight!”</p>
 </section>
 </section>
 </article>
-<script src="ebook.js"></script>
+<script src="/ebook.js"></script>
 </body>
 </html>
