--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="dc.license"       href="http://creativecommons.org/licenses/publicdomain/" title="License" />
     <link rel="dc.description"   href="http://en.wikipedia.org/wiki/Ebook" title="Details on Wikipedia" />
     <link rel="schema.dc"        href="http://purl.org/dc/terms/" />
-    <link rel="stylesheet"       href="ebook.css" />
+    <link rel="stylesheet"       href="/ebook.css" />
     <link rel="start"            href="/" title="Start" />
     <link rel="index"            href="/ebooks/" title="Index" />
     <link rel="up"               href="/ebooks/" />
@@ -40,25 +40,25 @@
 <h2>Contents</h2>
 <p>What’s in here?</p>
 <ol>
-<li><a href="A_Connecticut_Yankee.html">A Connecticut Yankee at King Arthur’s Court, <em>by Marc Twain</em></a></li>
-<li><a href="Alices_Adventures_in_Wonderland.html">Alice’s Adventures in Wonderland, <em>by Lewis Carroll</em></a></li>
-<li><a href="At_the_Mountains_of_Madness.html">At the Mountains of Madness, <em>by H. P. Lovecraft</em></a></li>
-<li><a href="Dracula.html">Dracula, <em>by Bram Stoker</em></a></li>
-<li><a href="Gullivers_Travels.html">Gulliver’s Travels, <em>by Jonathan Swift</em></a></li>
-<li><a href="Narrative_of_Arthur_Gordon_Pym.html">Narrative of Arthur Gordon Pym, <em>by Edgar Allan Poe</em></a></li>
-<li><a href="New_Arabian_Nights.html">New Arabian Nights, <em>by Robert Lewis Stevenson</em></a></li>
-<li><a href="Siddhartha.html">Siddhartha, <em>by Hermann Hesse</em></a></li>
-<li><a href="The_Adventures_of_Sherlock_Holmes.html">The Adventures of Sherlock Holmes, <em>by Sir Arthur Conan Doyle</em></a></li>
-<li><a href="The_Call_of_Cthulhu.html">The Call of Cthulhu, <em>by H. P. Lovecraft</em></a></li>
-<li><a href="The_Case_of_Charles_Dexter_Ward.html">The Case of Charles Dexter Ward, <em>by H. P. Lovecraft</em></a></li>
-<li><a href="The_Happy_Prince_and_Other_Tales.html">The Happy Prince and Other Tales, <em>by Oscar Wilde</em></a></li>
-<li><a href="The_Invisible_Man.html">The Invisible Man, <em>by H. G. Wells</em></a></li>
-<li><a href="The_Jungle_Book.html">The Jungle Book, <em>by Rudyard Kipling</em></a></li>
-<li><a href="The_Picture_of_Dorian_Gray.html">The Picture of Dorian Gray, <em>by Oscar Wilde</em></a></li>
-<li><a href="The_Strange_Case_of_Dr._Jekyll_and_Mr._Hyde.html">The Strange Case of Dr. Jekyll and Mr. Hyde, <em>by Robert Lewis Stevenson</em></a></li>
-<li><a href="The_Time_Machine.html">The Time Machine, <em>by H. G. Wells</em></a></li>
-<li><a href="The_War_of_the_Worlds.html">The War of the Worlds, <em>by H. G. Wells</em></a></li>
-<li><a href="Treasure_Island.html">Treasure Island, <em>by Robert Lewis Stevenson</em></a></li>
+<li><a href="/ebooks/A_Connecticut_Yankee.html">A Connecticut Yankee at King Arthur’s Court, <em>by Marc Twain</em></a></li>
+<li><a href="/ebooks/Alices_Adventures_in_Wonderland.html">Alice’s Adventures in Wonderland, <em>by Lewis Carroll</em></a></li>
+<li><a href="/ebooks/At_the_Mountains_of_Madness.html">At the Mountains of Madness, <em>by H. P. Lovecraft</em></a></li>
+<li><a href="/ebooks/Dracula.html">Dracula, <em>by Bram Stoker</em></a></li>
+<li><a href="/ebooks/Gullivers_Travels.html">Gulliver’s Travels, <em>by Jonathan Swift</em></a></li>
+<li><a href="/ebooks/Narrative_of_Arthur_Gordon_Pym.html">Narrative of Arthur Gordon Pym, <em>by Edgar Allan Poe</em></a></li>
+<li><a href="/ebooks/New_Arabian_Nights.html">New Arabian Nights, <em>by Robert Lewis Stevenson</em></a></li>
+<li><a href="/ebooks/Siddhartha.html">Siddhartha, <em>by Hermann Hesse</em></a></li>
+<li><a href="/ebooks/The_Adventures_of_Sherlock_Holmes.html">The Adventures of Sherlock Holmes, <em>by Sir Arthur Conan Doyle</em></a></li>
+<li><a href="/ebooks/The_Call_of_Cthulhu.html">The Call of Cthulhu, <em>by H. P. Lovecraft</em></a></li>
+<li><a href="/ebooks/The_Case_of_Charles_Dexter_Ward.html">The Case of Charles Dexter Ward, <em>by H. P. Lovecraft</em></a></li>
+<li><a href="/ebooks/The_Happy_Prince_and_Other_Tales.html">The Happy Prince and Other Tales, <em>by Oscar Wilde</em></a></li>
+<li><a href="/ebooks/The_Invisible_Man.html">The Invisible Man, <em>by H. G. Wells</em></a></li>
+<li><a href="/ebooks/The_Jungle_Book.html">The Jungle Book, <em>by Rudyard Kipling</em></a></li>
+<li><a href="/ebooks/The_Picture_of_Dorian_Gray.html">The Picture of Dorian Gray, <em>by Oscar Wilde</em></a></li>
+<li><a href="/ebooks/The_Strange_Case_of_Dr._Jekyll_and_Mr._Hyde.html">The Strange Case of Dr. Jekyll and Mr. Hyde, <em>by Robert Lewis Stevenson</em></a></li>
+<li><a href="/ebooks/The_Time_Machine.html">The Time Machine, <em>by H. G. Wells</em></a></li>
+<li><a href="/ebooks/The_War_of_the_Worlds.html">The War of the Worlds, <em>by H. G. Wells</em></a></li>
+<li><a href="/ebooks/Treasure_Island.html">Treasure Island, <em>by Robert Lewis Stevenson</em></a></li>
 </ol>
 </section>
 <section id="Credits">
@@ -108,6 +108,11 @@ Disqus.</a></noscript>
 </p>
 </section>
 </article>
-<script src="ebook.js"></script>
+<script src="/ebook.js"></script>
+<script>
+if (location.search.search('f=404') > -1) {
+  $('<p style="background:#A00;color:white;padding:1.875em;margin:1.875em auto;">The page couldn’t be found.</p>').prependTo('.book');
+}
+</script>
 </body>
 </html>
