try to get the paths right

--- a/At_the_Mountains_of_Madness.html
+++ b/At_the_Mountains_of_Madness.html
@@ -23,7 +23,7 @@
     <link rel="dc.source"        href="http://en.wikisource.org/wiki/At_the_Mountains_of_Madness" title="Original Source" />
     <link rel="dc.description"   href="http://en.wikipedia.org/wiki/At_the_Mountains_of_Madness" title="Details on Wikipedia" />
     <link rel="schema.dc"        href="http://purl.org/dc/terms/" />
-    <link rel="stylesheet"       href="/ebook.css" />
+    <link rel="stylesheet"       href="/ebooks/ebook.css" />
     <link rel="start"            href="/" title="Start" />
     <link rel="index"            href="/ebooks/" title="Index" />
     <link rel="up"               href="/ebooks/" />
@@ -379,6 +379,6 @@ In the realms of the boreal pole.</p>
 <p>At the time, his shrieks were confined to the repetition of a single, mad word of all too obvious source: “Tekeli-li! Tekeli-li!”</p>
 </section>
 </article>
-<script src="/ebook.js"></script>
+<script src="/ebooks/ebook.js"></script>
 </body>
 </html>
