--- a/Gullivers_Travels.html
+++ b/Gullivers_Travels.html
@@ -23,7 +23,7 @@
     <link rel="dc.source"        href="http://www.gutenberg.org/etext/829" title="Original Source" />
     <link rel="dc.description"   href="http://en.wikipedia.org/wiki/Gullivers_travels" title="Details on Wikipedia" />
     <link rel="schema.dc"        href="http://purl.org/dc/terms/" />
-    <link rel="stylesheet"       href="/ebook.css" />
+    <link rel="stylesheet"       href="/ebooks/ebook.css" />
     <link rel="start"            href="/" title="Start" />
     <link rel="index"            href="/ebooks/" title="Index" />
     <link rel="up"               href="/ebooks/" />
@@ -10049,6 +10049,6 @@ to come in my sight.</p>
 </section>
 </section>
 </article>
-<script src="/ebook.js"></script>
+<script src="/ebooks/ebook.js"></script>
 </body>
 </html>
