--- a/The_Adventures_of_Sherlock_Holmes.html
+++ b/The_Adventures_of_Sherlock_Holmes.html
@@ -23,7 +23,7 @@
     <link rel="dc.source"        href="http://www.gutenberg.org/etext/1661" title="Original Source" />
     <link rel="dc.description"   href="http://en.wikipedia.org/wiki/The_Adventures_of_Sherlock_Holmes" title="Details on Wikipedia" />
     <link rel="schema.dc"        href="http://purl.org/dc/terms/" />
-    <link rel="stylesheet"       href="/ebook.css" />
+    <link rel="stylesheet"       href="/ebooks/ebook.css" />
     <link rel="start"            href="/" title="Start" />
     <link rel="index"            href="/ebooks/" title="Index" />
     <link rel="up"               href="/ebooks/" />
@@ -10175,6 +10175,6 @@ of his problems, and she is now the head of a private school at
 Walsall, where I believe that she has met with considerable success.</p>
 </section>
 </article>
-<script src="/ebook.js"></script>
+<script src="/ebooks/ebook.js"></script>
 </body>
 </html>
