--- a/The_Call_of_Cthulhu.html
+++ b/The_Call_of_Cthulhu.html
@@ -23,7 +23,7 @@
     <link rel="dc.source"        href="http://en.wikisource.org/wiki/The_Call_of_Cthulhu" title="Original Source" />
     <link rel="dc.description"   href="http://en.wikipedia.org/wiki/The_Call_of_Cthulhu" title="Details on Wikipedia" />
     <link rel="schema.dc"        href="http://purl.org/dc/terms/" />
-    <link rel="stylesheet"       href="/ebook.css" />
+    <link rel="stylesheet"       href="/ebooks/ebook.css" />
     <link rel="start"            href="/" title="Start" />
     <link rel="index"            href="/ebooks/" title="Index" />
     <link rel="up"               href="/ebooks/" />
@@ -173,6 +173,6 @@ And with strange aeons even death may die.</p>
 <p>Cthulhu still lives, too, I suppose, again in that chasm of stone which has shielded him since the sun was young. His accursed city is sunken once more, for the Vigilant sailed over the spot after the April storm; but his ministers on earth still bellow and prance and slay around idol-capped monoliths in lonely places. He must have been trapped by the sinking whilst within his black abyss, or else the world would by now be screaming with fright and frenzy. Who knows the end? What has risen may sink, and what has sunk may rise. Loathsomeness waits and dreams in the deep, and decay spreads over the tottering cities of men. A time will come—but I must not and cannot think! Let me pray that, if I do not survive this manuscript, my executors may put caution before audacity and see that it meets no other eye.</p>
 </section>
 </article>
-<script src="/ebook.js"></script>
+<script src="/ebooks/ebook.js"></script>
 </body>
 </html>
