--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="dc.license"       href="http://creativecommons.org/licenses/publicdomain/" title="License" />
     <link rel="dc.description"   href="http://en.wikipedia.org/wiki/Ebook" title="Details on Wikipedia" />
     <link rel="schema.dc"        href="http://purl.org/dc/terms/" />
-    <link rel="stylesheet"       href="/ebook.css" />
+    <link rel="stylesheet"       href="/ebooks/ebook.css" />
     <link rel="start"            href="/" title="Start" />
     <link rel="index"            href="/ebooks/" title="Index" />
     <link rel="up"               href="/ebooks/" />
@@ -108,7 +108,7 @@ Disqus.</a></noscript>
 </p>
 </section>
 </article>
-<script src="/ebook.js"></script>
+<script src="/ebooks/ebook.js"></script>
 <script>
 if (location.search.search('f=404') > -1) {
   $('<p style="background:#A00;color:white;padding:1.875em;margin:1.875em auto;">The page couldn’t be found.</p>').prependTo('.book');
