fix uppercase words in Dracula

--- a/Dracula.html
+++ b/Dracula.html
@@ -3008,7 +3008,7 @@ Russian consul, who kindly translated for me, time being short.</p>
  something. Seemed scared, but would not speak out.</p>
 <p> On 14 July was somewhat anxious about crew. Men all steady<br/>
  fellows, who sailed with me before. Mate could not make out what<br/>
- was wrong. They only told him there was SOMETHING, and crossed<br/>
+ was wrong. They only told him there was <strong>something</strong>, and crossed<br/>
  themselves. Mate lost temper with one of them that day and struck<br/>
  him. Expected fierce quarrel, but all was quiet.</p>
 <p> On 16 July mate reported in the morning that one of the<br/>
@@ -3016,7 +3016,7 @@ Russian consul, who kindly translated for me, time being short.</p>
  Took larboard watch eight bells last night, was relieved by<br/>
  Amramoff, but did not go to bunk. Men more downcast than<br/>
  ever. All said they expected something of the kind, but<br/>
- would not say more than there was SOMETHING aboard. Mate<br/>
+ would not say more than there was <strong>something</strong> aboard. Mate<br/>
  getting very impatient with them. Feared some trouble<br/>
  ahead.</p>
 <p> On 17 July, yesterday, one of the men, Olgaren, came to my cabin,<br/>
@@ -3559,7 +3559,7 @@ directed.</p>
 Yours respectfully,<br/>
 Pro Carter, Paterson &amp; Co.”</p>
 <hr/>
-<h3>MINA MURRAY’S JOURNAL.</h3>
+<h3>Mina Murray’s Journal.</h3>
 <p>18 August.—I am happy today, and write sitting on the seat in the
 churchyard. Lucy is ever so much better. Last night she slept well
 all night, and did not disturb me once.</p>
@@ -4139,7 +4139,7 @@ further clue. You must not be angry with me, Art, because his very
 reticence means that all his brains are working for her good. He
 will speak plainly enough when the time comes, be sure. So I told
 him I would simply write an account of our visit, just as if I were
-doing a descriptive special article for THE DAILY TELEGRAPH. He
+doing a descriptive special article for <span class="proper-name">The Daily Telegraph</span>. He
 seemed not to notice, but remarked that the smuts of London were not
 quite so bad as they used to be when he was a student here. I am to
 get his report tomorrow if he can possibly make it. In any case I
@@ -4914,7 +4914,7 @@ angrily against the window panes.</p>
 <p class="article_header">The Escaped Wolf Perilous Adventure of our Interviewer</p>
 <p class="article_header">Interview with the Keeper in the Zoological Gardens</p>
 <p>After many inquiries and almost as many refusals, and perpetually
-using the words ‘<span class="proper-name">PALL MALL GAZETTE</span>’ as a sort of talisman, I managed
+using the words ‘<span class="proper-name">Pall Mall Gazette</span>’ as a sort of talisman, I managed
 to find the keeper of the section of the Zoological Gardens in which
 the wolf department is included. Thomas Bilder lives in one of the
 cottages in the enclosure behind the elephant house, and was just
@@ -6384,7 +6384,7 @@ and where wild flowers grow of their own accord.</p>
 another. If I do, or if I even open this again, it will be to deal
 with different people and different themes, for here at the end, where
 the romance of my life is told, ere I go back to take up the thread of
-my life-work, I say sadly and without hope, “FINIS”.</p>
+my life-work, I say sadly and without hope, “<strong xml:lang="la" lang="la">finis</strong>”.</p>
 <hr/>
 <h3>The Westminster Gazette, 25 September A Hampstead Mystery</h3>
 <p>The neighborhood of Hampstead is just at present exercised
@@ -8085,7 +8085,7 @@ man of great nerve. That going down to the vault a second time was a
 remarkable piece of daring. After reading his account of it I was
 prepared to meet a good specimen of manhood, but hardly the quiet,
 businesslike gentleman who came here today.</p>
-<p class="separation">LATER.—After lunch Harker and his wife went back to their own room,
+<p class="separation">Later.—After lunch Harker and his wife went back to their own room,
 and as I passed a while ago I heard the click of the typewriter. They
 are hard at it. Mrs. Harker says that they are knitting together in
 chronological order every scrap of evidence they have. Harker has got
@@ -11293,7 +11293,7 @@ might have seen looking forward if we had been able to see what we
 might have seen! Alas, but that sentence is a puddle, is it not? We
 can know now what was in the Count’s mind, when he seize that money,
 though Jonathan’s so fierce knife put him in the danger that even he
-dread. He meant escape. Hear me, ESCAPE! He saw that with but one
+dread. He meant escape. Hear me, <strong>escape!</strong> He saw that with but one
 earth box left, and a pack of men following like dogs after a fox,
 this London was no place for him. He have take his last earth box on
 board a ship, and he leave the land. He think to escape, but no! We
