revert back to relative links

--- a/A_Connecticut_Yankee.html
+++ b/A_Connecticut_Yankee.html
@@ -23,7 +23,7 @@
     <link rel="dc.source"        href="http://www.gutenberg.org/etext/86" title="Original Source" />
     <link rel="dc.description"   href="http://en.wikipedia.org/wiki/A_Connecticut_Yankee_in_King_Arthur%27s_Court" title="Details on Wikipedia" />
     <link rel="schema.dc"        href="http://purl.org/dc/terms/" />
-    <link rel="stylesheet"       href="/ebooks/ebook.css" />
+    <link rel="stylesheet"       href="ebook.css" />
     <link rel="start"            href="/" title="Start" />
     <link rel="index"            href="/ebooks/" title="Index" />
     <link rel="up"               href="/ebooks/" />
@@ -2582,6 +2582,6 @@ and all will be forgiven.</p>
 </section>
 </section>
 </article>
-<script src="/ebooks/ebook.js"></script>
+<script src="ebook.js"></script>
 </body>
 </html>
