--- a/The_Happy_Prince_and_Other_Tales.html
+++ b/The_Happy_Prince_and_Other_Tales.html
@@ -22,7 +22,7 @@
     <link rel="dc.source"        href="http://www.gutenberg.org/etext/902" title="Original Source" />
     <link rel="dc.description"   href="http://en.wikipedia.org/wiki/The_Happy_Prince_and_Other_Tales" title="Details on Wikipedia" />
     <link rel="schema.dc"        href="http://purl.org/dc/terms/" />
-    <link rel="stylesheet"       href="/ebooks/ebook.css" />
+    <link rel="stylesheet"       href="ebook.css" />
     <link rel="start"            href="/" title="Start" />
     <link rel="index"            href="/ebooks/" title="Index" />
     <link rel="up"               href="/ebooks/" />
@@ -462,6 +462,6 @@
 <p>“I knew I should create a great sensation,” gasped the Rocket, and he went out.</p>
 </section>
 </article>
-<script src="/ebooks/ebook.js"></script>
+<script src="ebook.js"></script>
 </body>
 </html>
