--- a/Narrative_of_Arthur_Gordon_Pym.html
+++ b/Narrative_of_Arthur_Gordon_Pym.html
@@ -22,7 +22,7 @@
     <link rel="dc.source"        href="http://www.gutenberg.org/etext/2149" title="Original Source" />
     <link rel="dc.description"   href="http://en.wikipedia.org/wiki/The_Narrative_of_Arthur_Gordon_Pym" title="Details on Wikipedia" />
     <link rel="schema.dc"        href="http://purl.org/dc/terms/" />
-    <link rel="stylesheet"       href="/ebooks/ebook.css" />
+    <link rel="stylesheet"       href="ebook.css" />
     <link rel="start"            href="/" title="Start" />
     <link rel="index"            href="/ebooks/" title="Index" />
     <link rel="up"               href="/ebooks/" />
@@ -481,6 +481,6 @@
 <p><em>“I have graven it within the hills, and my vengeance upon the dust within the rock.”</em></p>
 </section>
 </article>
-<script src="/ebooks/ebook.js"></script>
+<script src="ebook.js"></script>
 </body>
 </html>
