--- a/The_Case_of_Charles_Dexter_Ward.html
+++ b/The_Case_of_Charles_Dexter_Ward.html
@@ -23,7 +23,7 @@
     <link rel="dc.source"        href="http://en.wikisource.org/wiki/The_Case_of_Charles_Dexter_Ward" title="Original Source" />
     <link rel="dc.description"   href="http://en.wikipedia.org/wiki/The_Case_of_Charles_Dexter_Ward" title="Details on Wikipedia" />
     <link rel="schema.dc"        href="http://purl.org/dc/terms/" />
-    <link rel="stylesheet"       href="/ebooks/ebook.css" />
+    <link rel="stylesheet"       href="ebook.css" />
     <link rel="start"            href="/" title="Start" />
     <link rel="index"            href="/ebooks/" title="Index" />
     <link rel="up"               href="/ebooks/" />
@@ -565,6 +565,6 @@ ZHRO!</p>
 </section>
 </section>
 </article>
-<script src="/ebooks/ebook.js"></script>
+<script src="ebook.js"></script>
 </body>
 </html>
