--- a/The_War_of_the_Worlds.html
+++ b/The_War_of_the_Worlds.html
@@ -23,7 +23,7 @@
     <link rel="dc.source"        href="http://en.wikisource.org/wiki/The_War_of_the_Worlds" title="Original Source" />
     <link rel="dc.description"   href="http://en.wikipedia.org/wiki/The_War_of_the_Worlds" title="Details on Wikipedia" />
     <link rel="schema.dc"        href="http://purl.org/dc/terms/" />
-    <link rel="stylesheet"       href="/ebooks/ebook.css" />
+    <link rel="stylesheet"       href="ebook.css" />
     <link rel="start"            href="/" title="Start" />
     <link rel="index"            href="/ebooks/" title="Index" />
     <link rel="up"               href="/ebooks/" />
@@ -1064,6 +1064,6 @@ And how are all things made for man?
 </section>
 </section>
 </article>
-<script src="/ebooks/ebook.js"></script>
+<script src="ebook.js"></script>
 </body>
 </html>
