add ToC to Robinson

--- a/Robinson_Crusoe.html
+++ b/Robinson_Crusoe.html
@@ -38,15 +38,34 @@
       <header>
 <h1>The Life and Adventures of Robinson Crusoe</h1>
 <h2 class="author">Daniel Defoe</h2>
-<p style="text-align: center"><em>With Illustrations by H. M.
-Brock</em></p>
-<p style="text-align: center">London<br />
+<p>With Illustrations by H. M. Brock</p>
+<p>London<br />
 Seeley, Service &amp; Co. Limited<br />
 38 Great Russell Street</p>
 </header>
 <section id="Table_of_Contents">
 <h2>Contents</h2>
 <ol>
+<li><a href="#Chapter_I">Start in Life</a></li>
+<li><a href="#Chapter_II">Slavery and Escape</a></li>
+<li><a href="#Chapter_III">Wrecked on a Desert Island</a></li>
+<li><a href="#Chapter_IV">First Weeks on the Island</a></li>
+<li><a href="#Chapter_V">Builds a House—The Journal</a></li>
+<li><a href="#Chapter_VI">Ill and Conscience-stricken</a></li>
+<li><a href="#Chapter_VII">Agricultural Experience</a></li>
+<li><a href="#Chapter_VIII">Surveys his Position</a></li>
+<li><a href="#Chapter_IX">A Boat</a></li>
+<li><a href="#Chapter_X">Tames Goats</a></li>
+<li><a href="#Chapter_XI">Finds Print of Man’s Foot on the
+<li><a href="#Chapter_XII">A Cave Retreat</a></li>
+<li><a href="#Chapter_XIII">Wreck of a Spanish Ship</a></li>
+<li><a href="#Chapter_XIV">A Dream Realised</a></li>
+<li><a href="#Chapter_XV">Friday’s Education</a></li>
+<li><a href="#Chapter_XVI">Rescue of Prisoners from Cannibals</a></li>
+<li><a href="#Chapter_XVII">Visit of Mutineers</a></li>
+<li><a href="#Chapter_XVIII">The Ship Recovered</a></li>
+<li><a href="#Chapter_XIX">Return to England</a></li>
+<li><a href="#Chapter_XX">Fight Between Friday and a Bear</a></li>
 </ol>
 </section>
 <section>
