get the sources right on Robinson

--- a/Robinson_Crusoe.html
+++ b/Robinson_Crusoe.html
@@ -20,7 +20,7 @@
     <link rel="dc.identifier"    href="http://www.manuel-strehl.de/ebooks/Robinson%20Crusoe" />
     <link rel="dc.tableofContents" href="#Table_of_Contents" />
     <link rel="dc.license"       href="http://creativecommons.org/licenses/publicdomain/" title="License" />
-    <link rel="dc.source"        href="http://en.wikisource.org/wiki/Robinson_Crusoe" title="Original Source" />
+    <link rel="dc.source"        href="http://www.gutenberg.org/etext/521" title="Original Source" />
     <link rel="dc.description"   href="http://en.wikipedia.org/wiki/Robinson_Crusoe" title="Details on Wikipedia" />
     <link rel="schema.dc"        href="http://purl.org/dc/terms/" />
     <link rel="stylesheet"       href="ebook.css" />
