--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
 <li><a href="/ebooks/Gullivers_Travels.html">Gulliver’s Travels, <em>by Jonathan Swift</em></a></li>
 <li><a href="/ebooks/Narrative_of_Arthur_Gordon_Pym.html">Narrative of Arthur Gordon Pym, <em>by Edgar Allan Poe</em></a></li>
 <li><a href="/ebooks/New_Arabian_Nights.html">New Arabian Nights, <em>by Robert Lewis Stevenson</em></a></li>
+<li><a href="/ebooks/Peter_Pan.html">Peter Pan, <em>by J. M. Barrie</em></a></li>
+<li><a href="/ebooks/Robinson_Crusoe.html">Robinson Crusoe, <em>by Daniel Dafoe</em></a></li>
 <li><a href="/ebooks/Siddhartha.html">Siddhartha, <em>by Hermann Hesse</em></a></li>
 <li><a href="/ebooks/The_Adventures_of_Sherlock_Holmes.html">The Adventures of Sherlock Holmes, <em>by Sir Arthur Conan Doyle</em></a></li>
 <li><a href="/ebooks/The_Call_of_Cthulhu.html">The Call of Cthulhu, <em>by H. P. Lovecraft</em></a></li>
