lowercase'd ToC in Peter Pan

--- a/Peter_Pan.html
+++ b/Peter_Pan.html
@@ -44,23 +44,23 @@
 <section id="Table_of_Contents">
 <h2>Contents</h2>
 <ol>
-<li><a href="#Chapter_1">Chapter 1 PETER BREAKS THROUGH</a></li>
-<li><a href="#Chapter_2">Chapter 2 THE SHADOW</a></li>
-<li><a href="#Chapter_3">Chapter 3 COME AWAY, COME AWAY!</a></li>
-<li><a href="#Chapter_4">Chapter 4 THE FLIGHT</a></li>
-<li><a href="#Chapter_5">Chapter 5 THE ISLAND COME TRUE</a></li>
-<li><a href="#Chapter_6">Chapter 6 THE LITTLE HOUSE</a></li>
-<li><a href="#Chapter_7">Chapter 7 THE HOME UNDER THE GROUND</a></li>
-<li><a href="#Chapter_8">Chapter 8 THE MERMAIDS’ LAGOON</a></li>
-<li><a href="#Chapter_9">Chapter 9 THE NEVER BIRD</a></li>
-<li><a href="#Chapter_10">Chapter 10 THE HAPPY HOME</a></li>
-<li><a href="#Chapter_11">Chapter 11 WENDY’S STORY</a></li>
-<li><a href="#Chapter_12">Chapter 12 THE CHILDREN ARE CARRIED OFF</a></li>
-<li><a href="#Chapter_13">Chapter 13 DO YOU BELIEVE IN FAIRIES?</a></li>
-<li><a href="#Chapter_14">Chapter 14 THE PIRATE SHIP</a></li>
-<li><a href="#Chapter_15">Chapter 15 “HOOK OR ME THIS TIME”</a></li>
-<li><a href="#Chapter_16">Chapter 16 THE RETURN HOME</a></li>
-<li><a href="#Chapter_17">Chapter 17 WHEN WENDY GREW UP</a></li>
+<li><a href="#Chapter_1">Chapter 1 Peter Breaks Through</a></li>
+<li><a href="#Chapter_2">Chapter 2 The Shadow</a></li>
+<li><a href="#Chapter_3">Chapter 3 Come Away, Come Away!</a></li>
+<li><a href="#Chapter_4">Chapter 4 The Flight</a></li>
+<li><a href="#Chapter_5">Chapter 5 The Island Come True</a></li>
+<li><a href="#Chapter_6">Chapter 6 The Little House</a></li>
+<li><a href="#Chapter_7">Chapter 7 The Home Under The Ground</a></li>
+<li><a href="#Chapter_8">Chapter 8 The Mermaids’ Lagoon</a></li>
+<li><a href="#Chapter_9">Chapter 9 The Never Bird</a></li>
+<li><a href="#Chapter_10">Chapter 10 The Happy Home</a></li>
+<li><a href="#Chapter_11">Chapter 11 Wendy’s Story</a></li>
+<li><a href="#Chapter_12">Chapter 12 The Children Are Carried Off</a></li>
+<li><a href="#Chapter_13">Chapter 13 Do You Believe In Fairies?</a></li>
+<li><a href="#Chapter_14">Chapter 14 The Pirate Ship</a></li>
+<li><a href="#Chapter_15">Chapter 15 “Hook Or Me This Time”</a></li>
+<li><a href="#Chapter_16">Chapter 16 The Return Home</a></li>
+<li><a href="#Chapter_17">Chapter 17 When Wendy Grew Up</a></li>
 </ol>
 </section>
 <section id="Chapter_1">
