--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 <li><a href="Alices_Adventures_in_Wonderland.html">Alice’s Adventures in Wonderland, <em>by Lewis Carroll</em></a></li>
 <li><a href="At_the_Mountains_of_Madness.html">At the Mountains of Madness, <em>by H. P. Lovecraft</em></a></li>
 <li><a href="Dracula.html">Dracula, <em>by Bram Stoker</em></a></li>
+<li><a href="Frankenstein.html">Frankenstein, <em>by Mary Shelley</em></a></li>
 <li><a href="Gullivers_Travels.html">Gulliver’s Travels, <em>by Jonathan Swift</em></a></li>
 <li><a href="Narrative_of_Arthur_Gordon_Pym.html">Narrative of Arthur Gordon Pym, <em>by Edgar Allan Poe</em></a></li>
 <li><a href="New_Arabian_Nights.html">New Arabian Nights, <em>by Robert Lewis Stevenson</em></a></li>
-<li><a href="Peter_Pan.html">Peter Pan, <em>by J. M. Barrie</em></a></li>
 <li><a href="Robinson_Crusoe.html">Robinson Crusoe, <em>by Daniel Dafoe</em></a></li>
 <li><a href="Siddhartha.html">Siddhartha, <em>by Hermann Hesse</em></a></li>
 <li><a href="The_Adventures_of_Sherlock_Holmes.html">The Adventures of Sherlock Holmes, <em>by Sir Arthur Conan Doyle</em></a></li>
