add content to index page, add Biene Maja and Christmas Carol to index

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 <link rel="up"               href="/ebooks/" />
 <link rel="contents"         href="#Table_of_Contents" title="Table of Contents" />
 <link rel="copyright"        href="http://creativecommons.org/licenses/publicdomain/" />
-<link rel="shortcut icon"    href="/favicon.ico" type="image/vnd.microsoft.icon" />
 <link rel="transformation"   href="http://static.manuel-strehl.de/Style/data-view" type="application/xslt+xml" />
 <title>eBooks</title>
 </head>
@@ -41,16 +40,18 @@
 <h2>Contents</h2>
 <p>What’s in here?</p>
 <ol>
+<li><a href="A_Christmas_Carol.html">A Christmas Carol, <em>by Charles Dickens</em></a></li>
 <li><a href="A_Connecticut_Yankee.html">A Connecticut Yankee at King Arthur’s Court, <em>by Marc Twain</em></a></li>
 <li><a href="Alices_Adventures_in_Wonderland.html">Alice’s Adventures in Wonderland, <em>by Lewis Carroll</em></a></li>
 <li><a href="At_the_Mountains_of_Madness.html">At the Mountains of Madness, <em>by H. P. Lovecraft</em></a></li>
+<li><a href="Biene_Maja.html">Die Biene Maja, <em>by Waldemar Bonsels</em></a> (german)</li>
 <li><a href="Dracula.html">Dracula, <em>by Bram Stoker</em></a></li>
 <li><a href="Frankenstein.html">Frankenstein, <em>by Mary Shelley</em></a></li>
 <li><a href="Gullivers_Travels.html">Gulliver’s Travels, <em>by Jonathan Swift</em></a></li>
 <li><a href="Narrative_of_Arthur_Gordon_Pym.html">Narrative of Arthur Gordon Pym, <em>by Edgar Allan Poe</em></a></li>
 <li><a href="New_Arabian_Nights.html">New Arabian Nights, <em>by Robert Lewis Stevenson</em></a></li>
 <li><a href="Robinson_Crusoe.html">Robinson Crusoe, <em>by Daniel Dafoe</em></a></li>
-<li><a href="Siddhartha.html">Siddhartha, <em>by Hermann Hesse</em></a></li>
+<li><a href="Siddhartha.html">Siddhartha, <em>by Hermann Hesse</em></a> (german)</li>
 <li><a href="The_Adventures_of_Sherlock_Holmes.html">The Adventures of Sherlock Holmes, <em>by Sir Arthur Conan Doyle</em></a></li>
 <li><a href="The_Call_of_Cthulhu.html">The Call of Cthulhu, <em>by H. P. Lovecraft</em></a></li>
 <li><a href="The_Case_of_Charles_Dexter_Ward.html">The Case of Charles Dexter Ward, <em>by H. P. Lovecraft</em></a></li>
@@ -86,6 +87,39 @@ is great for purposes like this site.</p>
 </section>
 <section id="Help">
 <h2>How to Use This Site</h2>
+<p>The following features rely on Javascript being active in your browser. If you
+don’t know, what that means, you usually don’t have to worry about it.</p>
+<p>At the top right corner you see three icons. They give you access to:</p>
+<ol>
+  <li>the settings for all ebooks, where you can configure viewing details,</li>
+  <li>the table of contents of the current ebook, and</li>
+  <li>the bookmarking utility, that sets the bookmark at the current position in the book.</li>
+</ol>
+<p>The left margin of the screen shows information about where in the book
+you are right now and gives you quick access to jump to the bookmark (“¶”), the
+top of the book (“↸”), the previous and next chapter. If there is a bookmark set, and if
+you haven’t visited it, since you opened the page, the “¶” will blink. If you move the mouse
+over it, the blinking will end.</p>
+<h3>Navigation with the Keyboard</h3>
+<p>If, by chance, you know the <code>vi</code> editor, you will be pleased to learn, that
+you can use <kbd>k</kbd> and <kbd>j</kbd> to scroll the view. <kbd>Ctrl-F</kbd> and
+<kbd>Ctrl-B</kbd> scroll a full screen wide forth and back.</p>
+<p>The <kbd>Ctrl-F</kbd> is usually used to access the text search. If you want or need this
+behaviour, you can simply keep <kbd>Ctrl-F</kbd> pressed for two seconds, and the search field
+will appear.</p>
+</section>
+<section id="reporting_errors">
+<h2>How to Report Errors</h2>
+<p>First of all, thank you for considering reporting an error. It is by far not possible for
+some people doing this project in their spare time to do serious proofreading. We rely on
+the great work done by Project Gutenberg, WikiSource and other people working openly together
+to bring great literature to the web. However, even then errors might slip in.</p>
+<p>If you buy a printed book, you usually have little to no way to tell the publisher, if there
+are typos or other errors in it. The web however makes it possible to give instant feedback. In
+the case of these ebooks you can <a href="http://github.com/Boldewyn/ebooks/issues">file an issue
+here</a> and tell us about the problem.</p>
+<p>You might also consider telling the folks at <a href="http://www.gutenberg.org">Project Gutenberg</a>,
+if you spotted a typo. They are usually open to and thankful for improvements in their ebooks.</p>
 </section>
 <section id="Feedback">
 <h2>Feedback</h2>
