add author to Biene Maja title

--- a/Biene_Maja.html
+++ b/Biene_Maja.html
@@ -30,7 +30,7 @@
     <link rel="contents"         href="#Table_of_Contents" title="Inhalt" />
     <link rel="copyright"        href="http://creativecommons.org/licenses/publicdomain/" />
     <link rel="transformation"   href="http://static.manuel-strehl.de/Style/data-view" type="application/xslt+xml" />
-    <title>Die Biene Maja</title>
+    <title>Die Biene Maja, von Waldemar Bonsels</title>
   </head>
   <body>
     <article class="book">
