set lang to de-DE in Nils Holgersson

--- a/Nils_Holgerson.html
+++ b/Nils_Holgerson.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html SYSTEM "about:legacy-compat">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de" lang="de">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de-DE" lang="de-DE">
   <head>
     <meta charset="utf-8" />
     <link rel="profile" href="http://www.w3.org/2003/g/data-view" />
@@ -14,7 +14,7 @@
     <meta name="dc.format"       content="application/xhtml+xml; charset=utf-8" data-scheme="dc.IMT" />
     <meta name="dc.date"         content="2009-09-30" data-scheme="dc.W3CDTF" />
     <meta name="dc.issued"       content="1920" data-scheme="dc.W3CDTF" />
-    <meta name="dc.language"     content="de" data-scheme="dc.RFC4646" />
+    <meta name="dc.language"     content="de-DE" data-scheme="dc.RFC4646" />
     <meta name="dc.spacial"      content="" data-scheme="dc.TGN" />
     <meta name="dc.rights"       content="Text and stylesheet are in the public domain. Third-party Javascript might come with different terms." />
     <link rel="dc.identifier"    href="http://www.manuel-strehl.de/ebooks/Nils%20Holgerson" />
