--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 <li><a href="Gullivers_Travels.html">Gulliver’s Travels, <em>by Jonathan Swift</em></a></li>
 <li><a href="Narrative_of_Arthur_Gordon_Pym.html">Narrative of Arthur Gordon Pym, <em>by Edgar Allan Poe</em></a></li>
 <li><a href="New_Arabian_Nights.html">New Arabian Nights, <em>by Robert Lewis Stevenson</em></a></li>
+<li><a href="Nils_Holgersson.html">Nils Holgersson, <em>by Selma Lagerlöf</em></a> (german)</li>
 <li><a href="Robinson_Crusoe.html">Robinson Crusoe, <em>by Daniel Dafoe</em></a></li>
 <li><a href="Siddhartha.html">Siddhartha, <em>by Hermann Hesse</em></a> (german)</li>
 <li><a href="The_Adventures_of_Sherlock_Holmes.html">The Adventures of Sherlock Holmes, <em>by Sir Arthur Conan Doyle</em></a></li>
