remove superfluous classes in Nils

--- a/Nils_Holgersson.html
+++ b/Nils_Holgersson.html
@@ -40,14 +40,14 @@ des kleinen Nils Holgersson<br />
 mit den Wildgänsen</h1>
 <h2 class="subtitle">Ein Kinderbuch</h2>
 <h2 class="author">Selma Lagerlöf</h2>
-<p class="center">Einzige berechtigte Übersetzung aus dem Schwedischen<br />von<br />Pauline Klaiber</p>
-<p class="center">Ausgabe in einem Bande<br />Zehntes bis fünfzehntes Tausend</p>
-<p class="center">Mit 95 Textillustrationen und 8 farbigen Vollbildern<br />von<br />Wilhelm Schulz<br />sowie einer Übersichtskarte von Schweden</p>
+<p>Einzige berechtigte Übersetzung aus dem Schwedischen<br />von<br />Pauline Klaiber</p>
+<p>Ausgabe in einem Bande<br />Zehntes bis fünfzehntes Tausend</p>
+<p>Mit 95 Textillustrationen und 8 farbigen Vollbildern<br />von<br />Wilhelm Schulz<br />sowie einer Übersichtskarte von Schweden</p>
 <figure>
 <img src="images/Nils_Holgerson/signet.png" width="120" height="104" alt="signet" />
 </figure>
-<p class="center">Albert Langen, München 1920</p>
-<p class="center">Druck von Hesse &amp; Becker in Leipzig<br />Einbände von E. A. Enders in Leipzig</p>
+<p>Albert Langen, München 1920</p>
+<p>Druck von Hesse &amp; Becker in Leipzig<br />Einbände von E. A. Enders in Leipzig</p>
 </header>
 <section id="Table_of_Contents">
 <h2>Inhalt</h2>
