--- a/index.de.html
+++ b/index.de.html
@@ -49,6 +49,7 @@
 <li><a href="Dracula.html">Dracula <em>von Bram Stoker</em></a> (englisch)</li>
 <li><a href="Frankenstein.html">Frankenstein <em>von Mary Shelley</em></a> (englisch)</li>
 <li><a href="Gullivers_Travels.html">Gulliver’s Travels <em>von Jonathan Swift</em></a> (englisch)</li>
+<li><a href="Moby-Dick.html">Moby-Dick, <em>von Herman Melville</em></a> (englisch)</li>
 <li><a href="Narrative_of_Arthur_Gordon_Pym.html">Narrative of Arthur Gordon Pym <em>von Edgar Allan Poe</em></a> (englisch)</li>
 <li><a href="New_Arabian_Nights.html">New Arabian Nights <em>von Robert Lewis Stevenson</em></a> (englisch)</li>
 <li><a href="Nils_Holgersson.html">Nils Holgersson <em>von Selma Lagerlöf</em></a></li>
