--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 <li><a href="Dracula.html">Dracula, <em>by Bram Stoker</em></a></li>
 <li><a href="Frankenstein.html">Frankenstein, <em>by Mary Shelley</em></a></li>
 <li><a href="Gullivers_Travels.html">Gulliver’s Travels, <em>by Jonathan Swift</em></a></li>
+<li><a href="Moby-Dick.html">Moby-Dick, <em>by Herman Melville</em></a></li>
 <li><a href="Narrative_of_Arthur_Gordon_Pym.html">Narrative of Arthur Gordon Pym, <em>by Edgar Allan Poe</em></a></li>
 <li><a href="New_Arabian_Nights.html">New Arabian Nights, <em>by Robert Lewis Stevenson</em></a></li>
 <li><a href="Nils_Holgersson.html">Nils Holgersson, <em>by Selma Lagerlöf</em></a> (german)</li>
